--- a/index.html
+++ b/index.html
@@ -1,3 +1,139 @@
-<html><head></head><body>
-  Placeholder for the most basic GUI version of the game, which is fully clientside and uses no libraries.
+<html>
+<head>
+<style>
+  #minigame {
+    margin-left: 50px;
+    position: relative;
+    width: 500px;
+    height: 500px;
+    z-index: -1000;
+  }
+
+  .panel {
+    position: absolute;
+    width: 40px;
+    height: 24px;
+    z-index: 0;
+  }
+  .panel.row_0 {
+    top: 100px;
+  }
+  .panel.row_1 {
+    top: 124px;
+  }
+  .panel.row_2 {
+    top: 148px;
+    height: 36px;
+  }
+  .panel.col_0 {
+    left: 0x;
+  }
+  .panel.col_1 {
+    left: 40px;
+  }
+  .panel.col_2 {
+    left: 80px;
+  }
+  .panel.col_3 {
+    left: 120px;
+  }
+  .panel.col_4 {
+    left: 160px;
+  }
+  .panel.col_5 {
+    left: 200px;
+  }
+  .panel.row_0.red {
+    background: url("sprites/battlefield_exe2.gif") -5px -239px;
+  }
+  .panel.row_1.red {
+    background: url("sprites/battlefield_exe2.gif") -5px -263px;
+  }
+  .panel.row_2.red {
+    background: url("sprites/battlefield_exe2.gif") -5px -287px;
+  }
+  .panel.row_0.blue {
+    background: url("sprites/battlefield_exe2.gif") -125px -239px;
+  }
+  .panel.row_1.blue {
+    background: url("sprites/battlefield_exe2.gif") -125px -263px;
+  }
+  .panel.row_2.blue {
+    background: url("sprites/battlefield_exe2.gif") -125px -287px;
+  }
+
+  .navi {
+    position: absolute;
+  }
+  .navi.row_0 {
+    z-index: 500;
+  }
+  .navi.row_1 {
+    z-index: 501;
+  }
+  .navi.row_2 {
+    z-index: 502;
+  }
+
+  #protoman {
+    left: 108px;
+    top: 114px;
+    width: 50px;
+    height: 55px;
+    background: url("sprites/ProtoMan_east.gif") -247px -182px;
+  }
+  #magicman {
+    left: 3px;
+    top: 102px;
+    background: url("sprites/MagicMan_east.gif") -131px -317px;
+    width: 38px;
+    height: 67px;
+  }
+  
+</style>
+</head>
+<body>
+  <script src="mechanics.js" type="text/javascript"></script>
+  <script src="animator.js" type="text/javascript"></script>
+  <script src="runner.js" type="text/javascript"></script>
+
+  Placeholder for the simplest GUI version of the base minigame.
+
+  <br>
+  
+  <div id="minigame">
+    <div id="panel_0_0" class="panel row_0 col_0 red"></div>
+    <div id="panel_0_1" class="panel row_1 col_0 red"></div>
+    <div id="panel_0_2" class="panel row_2 col_0 red"></div>
+    <div id="panel_1_0" class="panel row_0 col_1 red"></div>
+    <div id="panel_1_1" class="panel row_1 col_1 red"></div>
+    <div id="panel_1_2" class="panel row_2 col_1 red"></div>
+    <div id="panel_2_0" class="panel row_0 col_2 red"></div>
+    <div id="panel_2_1" class="panel row_1 col_2 red"></div>
+    <div id="panel_2_2" class="panel row_2 col_2 red"></div>
+    <div id="panel_3_0" class="panel row_0 col_3 blue"></div>
+    <div id="panel_3_1" class="panel row_1 col_3 blue"></div>
+    <div id="panel_3_2" class="panel row_2 col_3 blue"></div>
+    <div id="panel_4_0" class="panel row_0 col_4 blue"></div>
+    <div id="panel_4_1" class="panel row_1 col_4 blue"></div>
+    <div id="panel_4_2" class="panel row_2 col_4 blue"></div>
+    <div id="panel_5_0" class="panel row_0 col_5 blue"></div>
+    <div id="panel_5_1" class="panel row_1 col_5 blue"></div>
+    <div id="panel_5_2" class="panel row_2 col_5 blue"></div>
+
+    <div id="protoman" class="navi east standing row_3 col_2"></div>
+    <div id="magicman" class="navi west standing row_3 col_0"></div>
+  </id>
 </body></html>
+
+<!--
+// stage graphics -- battlefield_exe2.gif
+// red_row_0: 5:239 -> 44:262
+// red_row_1: 5:263 -> 44:286
+// red_row_2: 5:287 -> 44:318
+// blue_row_0: 125:239 -> 164:262
+// blue_row_1: 125:263 -> 164:286
+// blue_row_2: 125:287 -> 164:318
+// protoman_standing: 247:182 -> 296:236 (Blues_EXE1.gif, exclusive rect)
+// magicman_standing: 131:317 -> 168:383 (MagicMan.png, exclusive rect)
+-->
