--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
   .panel.col_5 {
     left: 200px;
   }
-  .panel.row_0.red {
+  .panel.row_0.west {
     background: url("sprites/battlefield_exe2.gif") -5px -239px;
   }
-  .panel.row_1.red {
+  .panel.row_1.west {
     background: url("sprites/battlefield_exe2.gif") -5px -263px;
   }
-  .panel.row_2.red {
+  .panel.row_2.west {
     background: url("sprites/battlefield_exe2.gif") -5px -287px;
   }
-  .panel.row_0.blue {
+  .panel.row_0.east {
     background: url("sprites/battlefield_exe2.gif") -125px -239px;
   }
-  .panel.row_1.blue {
+  .panel.row_1.east {
     background: url("sprites/battlefield_exe2.gif") -125px -263px;
   }
-  .panel.row_2.blue {
+  .panel.row_2.east {
     background: url("sprites/battlefield_exe2.gif") -125px -287px;
   }
 
@@ -76,54 +76,63 @@
   }
 
   #protoman {
-    left: 108px;
-    top: 114px;
+    top: 66px;
     width: 50px;
     height: 55px;
+  }
+  #protoman.west.standing {
+    left: 0px;
+    background: url("sprites/ProtoMan_west.gif") -183px -182px;
+  }
+  #protoman.east.standing {
+    left: -12px;
     background: url("sprites/ProtoMan_east.gif") -247px -182px;
   }
+
   #magicman {
-    left: 3px;
     top: 102px;
-    background: url("sprites/MagicMan_east.gif") -131px -317px;
     width: 38px;
     height: 67px;
+  }
+  #magicman.east.standing {
+    left: 203px;
+    background: url("sprites/MagicMan_east.gif") -131px -317px;
   }
   
 </style>
 </head>
 <body>
-  <script src="mechanics.js" type="text/javascript"></script>
-  <script src="animator.js" type="text/javascript"></script>
-  <script src="runner.js" type="text/javascript"></script>
-
   Placeholder for the simplest GUI version of the base minigame.
 
   <br>
-  
-  <div id="minigame">
-    <div id="panel_0_0" class="panel row_0 col_0 red"></div>
-    <div id="panel_0_1" class="panel row_1 col_0 red"></div>
-    <div id="panel_0_2" class="panel row_2 col_0 red"></div>
-    <div id="panel_1_0" class="panel row_0 col_1 red"></div>
-    <div id="panel_1_1" class="panel row_1 col_1 red"></div>
-    <div id="panel_1_2" class="panel row_2 col_1 red"></div>
-    <div id="panel_2_0" class="panel row_0 col_2 red"></div>
-    <div id="panel_2_1" class="panel row_1 col_2 red"></div>
-    <div id="panel_2_2" class="panel row_2 col_2 red"></div>
-    <div id="panel_3_0" class="panel row_0 col_3 blue"></div>
-    <div id="panel_3_1" class="panel row_1 col_3 blue"></div>
-    <div id="panel_3_2" class="panel row_2 col_3 blue"></div>
-    <div id="panel_4_0" class="panel row_0 col_4 blue"></div>
-    <div id="panel_4_1" class="panel row_1 col_4 blue"></div>
-    <div id="panel_4_2" class="panel row_2 col_4 blue"></div>
-    <div id="panel_5_0" class="panel row_0 col_5 blue"></div>
-    <div id="panel_5_1" class="panel row_1 col_5 blue"></div>
-    <div id="panel_5_2" class="panel row_2 col_5 blue"></div>
 
-    <div id="protoman" class="navi east standing row_3 col_2"></div>
-    <div id="magicman" class="navi west standing row_3 col_0"></div>
-  </id>
+  <div id="minigame">
+    <div id="panel_0_0" class="panel row_0 col_0 west"></div>
+    <div id="panel_0_1" class="panel row_1 col_0 west"></div>
+    <div id="panel_0_2" class="panel row_2 col_0 west"></div>
+    <div id="panel_1_0" class="panel row_0 col_1 west"></div>
+    <div id="panel_1_1" class="panel row_1 col_1 west"></div>
+    <div id="panel_1_2" class="panel row_2 col_1 west"></div>
+    <div id="panel_2_0" class="panel row_0 col_2 west"></div>
+    <div id="panel_2_1" class="panel row_1 col_2 west"></div>
+    <div id="panel_2_2" class="panel row_2 col_2 west"></div>
+    <div id="panel_3_0" class="panel row_0 col_3 east"></div>
+    <div id="panel_3_1" class="panel row_1 col_3 east"></div>
+    <div id="panel_3_2" class="panel row_2 col_3 east"></div>
+    <div id="panel_4_0" class="panel row_0 col_4 east"></div>
+    <div id="panel_4_1" class="panel row_1 col_4 east"></div>
+    <div id="panel_4_2" class="panel row_2 col_4 east"></div>
+    <div id="panel_5_0" class="panel row_0 col_5 east"></div>
+    <div id="panel_5_1" class="panel row_1 col_5 east"></div>
+    <div id="panel_5_2" class="panel row_2 col_5 east"></div>
+
+    <div id="protoman" class="navi west standing"></div>
+    <div id="magicman" class="navi east standing"></div>
+  </div>
+
+  <script src="mechanics.js" type="text/javascript"></script>
+  <script src="animator.js" type="text/javascript"></script>
+  <script src="runner.js" type="text/javascript"></script>
 </body></html>
 
 <!--
