--- a/index.html
+++ b/index.html
@@ -89,23 +89,15 @@
   }
   #protoman.west.attacking {
     top: 66px;
-    left: 2px; /* unconfirmed */
     width: 51px;
     height: 68px;
     background: url("sprites/ProtoMan_west.gif") -8px -244px;
   }
   #protoman.west.struck {
     top: 66px;
-    left: 2px; /* unconfirmed */
     width: 38px;
     height: 57px;
     background: url("sprites/ProtoMan_west.gif") -261px -394px;    
-  }
-
-  /* TODO: calculate and set mirror values on setup instead of hardcoding */
-  #protoman.east.standing {
-    left: -188px;
-    background: url("sprites/ProtoMan_east.gif") -247px -182px;
   }
 
   #magicman {
@@ -118,17 +110,41 @@
     background: url("sprites/MagicMan_east.gif") -131px -317px;
   }
   #magicman.east.attacking {
-    left: 203px; /* unconfirmed */
     width: 49px;
     height: 70px;
     background: url("sprites/MagicMan_east.gif") -253px -123px;    
   }
   #magicman.east.struck {
     /* MagicMan has no struck sprite so teleport is used as a stand-in */
-    left: 203px; /* unconfirmed*/
     width: 35px;
     height: 81px;
     background: url("sprites/MagicMan_east.gif") -257px -305px;
+  }
+
+  /* Sprites Inc. oddly does not have the obstacle sprites from BN1 */
+  /* Various placeholders are used for now until they can be grabbed */
+
+  .obstacle-RockCube {
+    width: 34px;
+    height: 45px;
+    background: url("sprites/battlefield_exe2.gif") -306px -186px;
+  }
+  .obstacle-IceCube {
+    /* TODO: this is just RockCube again, replace with IceMan's IceCube */;
+    width: 34px;
+    height: 45px;
+    background: url("sprites/battlefield_exe2.gif") -306px -186px;
+  }
+  .obstacle-Candle {
+    /* TODO: this is just RockCube again, replace with FlameMan's Candle */;
+    width: 34px;
+    height: 45px;
+    background: url("sprites/battlefield_exe2.gif") -306px -186px;
+  }
+  .obstacle-Anubis {
+    width: 19px;
+    height: 54px;
+    background: url("sprites/battlefield_exe2.gif") -425px -179px;
   }
   
 </style>
@@ -160,6 +176,8 @@
 
     <div id="protoman" class="navi west standing"></div>
     <div id="magicman" class="navi east standing"></div>
+
+    <div id="obstacle-anchor"></div>
   </div>
 
   <script src="mechanics.js" type="text/javascript"></script>
