use margin-left to center obstacle sprites

--- a/index.html
+++ b/index.html
@@ -129,23 +129,26 @@
   .obstacle-RockCube {
     width: 34px;
     height: 45px;
+    margin-left: 3px;
     background: url("sprites/battlefield_exe2.gif") -306px -186px;
   }
   .obstacle-IceCube {
     /* TODO: this is just RockCube again, replace with IceMan's IceCube */;
     width: 34px;
     height: 45px;
+    margin-left: 3px;
     background: url("sprites/battlefield_exe2.gif") -306px -186px;
   }
   .obstacle-Candle {
-    /* TODO: this is just RockCube again, replace with FlameMan's Candle */;
-    width: 34px;
-    height: 45px;
-    background: url("sprites/battlefield_exe2.gif") -306px -186px;
+    width: 24px;
+    height: 53px;
+    margin-left: 8px;
+    background: url("sprites/flameman.gif") -264px -409px;
   }
   .obstacle-Anubis {
     width: 19px;
     height: 54px;
+    margin-left: 10px;
     background: url("sprites/battlefield_exe2.gif") -425px -179px;
   }
   
