center display elements in window

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
   #minigame {
-    margin-left: 50px;
+    margin: 0 auto;
     position: relative;
     width: 240px;
     height: 150px;
@@ -153,7 +153,10 @@
   }
 
   #hand {
-    margin-top: 10px;
+    max-width: 350px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .battle-chip-card {
     width: 64px;
@@ -165,10 +168,7 @@
 </style>
 </head>
 <body>
-  Placeholder for the simplest GUI version of the base minigame.
-
   <br>
-
   <div id="minigame">
     <div id="panel_0_0" class="panel row_0 col_0 west"></div>
     <div id="panel_0_1" class="panel row_1 col_0 west"></div>
