--- a/index.html
+++ b/index.html
@@ -226,16 +226,80 @@
   }
 
   #hand {
-    max-width: 350px;
+    position: relative;
+    max-width: 400px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
   }
+  .card-and-border-box {
+    position: relative;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    width: 70px;
+    height: 62px;
+    display: inline-block;
+    border: none;
+  }
   .battle-chip-card {
+    position: absolute;
+    top: 3px;
+    left: 3px;
     width: 64px;
     height: 56px;
-    border: 1px solid green;
-    display: inline-block;
+  }
+  .card-border {
+    position: absolute;
+  }
+  .card-border-top {
+    top: 0px;
+    left: 0px;
+    width: 70px;
+    height: 3px;
+  }
+  .card-border-bottom {
+    bottom: 0px;
+    right: 0px;
+    width: 70px;
+    height: 3px;
+  }
+  .card-border-left {
+    top: 3px;
+    left: 0px;
+    width: 3px;
+    height: 56px;
+  }
+  .card-border-right {
+    top: 3px;
+    right: 0px;
+    width: 3px;
+    height: 56px;
+  }
+
+  .chosen > .card-border {
+    background-color: yellow;
+    box-sizing: border-box;
+  }
+
+  .chosen > .card-border-top {
+    border-top: 1px solid brown;
+    border-left: 1px solid brown;
+    border-right: 1px solid brown;
+  }
+  .chosen > .card-border-right {
+    border-right: 1px solid brown;
+  }
+  .chosen > .card-border-left {
+    border-left: 1px solid brown;
+  }
+  .chosen > .card-border-bottom {
+    border-bottom: 1px solid brown;
+    border-left: 1px solid brown;
+    border-right: 1px solid brown;
+  }
+
+  .chosen.operator-choice > .card-border-bottom {
+    background-color: green;
   }
   
 </style>
@@ -315,17 +379,45 @@
     <!-- this works for MVP, may need to refactor later 
          for smooth sliding animations -->
 
-    <!-- onclick handlers are for initial pre-Firebase prototyping only -->
-    <div id="battle-chip-card-0"
-      class="battle-chip-card" onclick="operator_chooses_chip_idx(0)"></div>
-    <div id="battle-chip-card-1"
-      class="battle-chip-card" onclick="operator_chooses_chip_idx(1)"></div>
-    <div id="battle-chip-card-2"
-      class="battle-chip-card" onclick="operator_chooses_chip_idx(2)"></div>
-    <div id="battle-chip-card-3"
-      class="battle-chip-card" onclick="operator_chooses_chip_idx(3)"></div>
-    <div id="battle-chip-card-4"
-      class="battle-chip-card" onclick="operator_chooses_chip_idx(4)"></div>
+    <!-- onclick handlers are for initial prototyping only -->
+    <div id="chip-card-and-border-box-0" class="card-and-border-box">
+      <!-- borders are implemented as divs so that we can animate the shortening
+        of each segment as time ticks down -->
+      <div id="chip-card-border-top-0" class="card-border card-border-top"></div>
+      <div id="chip-card-border-right-0" class="card-border card-border-right"></div>
+      <div id="chip-card-border-bottom-0" class="card-border card-border-bottom"></div>
+      <div id="chip-card-border-left-0" class="card-border card-border-left"></div>
+      <div id="battle-chip-card-0"
+        class="battle-chip-card" onclick="operator_chooses_chip_idx(0)"></div>
+    </div><div id="chip-card-and-border-box-1" class="card-and-border-box">
+      <div id="chip-card-border-top-1" class="card-border card-border-top"></div>
+      <div id="chip-card-border-right-1" class="card-border card-border-right"></div>
+      <div id="chip-card-border-bottom-1" class="card-border card-border-bottom"></div>
+      <div id="chip-card-border-left-1" class="card-border card-border-left"></div>
+      <div id="battle-chip-card-1"
+        class="battle-chip-card" onclick="operator_chooses_chip_idx(1)"></div>
+    </div><div id="chip-card-and-border-box-2" class="card-and-border-box">
+      <div id="chip-card-border-top-2" class="card-border card-border-top"></div>
+      <div id="chip-card-border-right-2" class="card-border card-border-right"></div>
+      <div id="chip-card-border-bottom-2" class="card-border card-border-bottom"></div>
+      <div id="chip-card-border-left-2" class="card-border card-border-left"></div>
+      <div id="battle-chip-card-2"
+        class="battle-chip-card" onclick="operator_chooses_chip_idx(2)"></div>
+    </div><div id="chip-card-and-border-box-3" class="card-and-border-box">
+      <div id="chip-card-border-top-3" class="card-border card-border-top"></div>
+      <div id="chip-card-border-right-3" class="card-border card-border-right"></div>
+      <div id="chip-card-border-bottom-3" class="card-border card-border-bottom"></div>
+      <div id="chip-card-border-left-3" class="card-border card-border-left"></div>
+      <div id="battle-chip-card-3"
+        class="battle-chip-card" onclick="operator_chooses_chip_idx(3)"></div>
+    </div><div id="chip-card-and-border-box-4" class="card-and-border-box">
+      <div id="chip-card-border-top-4" class="card-border card-border-top"></div>
+      <div id="chip-card-border-right-4" class="card-border card-border-right"></div>
+      <div id="chip-card-border-bottom-4" class="card-border card-border-bottom"></div>
+      <div id="chip-card-border-left-4" class="card-border card-border-left"></div>
+      <div id="battle-chip-card-4"
+        class="battle-chip-card" onclick="operator_chooses_chip_idx(4)"></div>
+    </div>
   </div>
 
   <script src="mechanics.js" type="text/javascript"></script>
