--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./navi-sprite-styles.css">
 </head>
 <body>
   <br>
