--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="./styles.css">
-  <link rel="stylesheet" href="./navi-sprite-styles.css">
+  <link rel="stylesheet" href="./navi_sprite_styles.css">
 </head>
 <body>
   <br>
@@ -79,7 +79,9 @@
            for smooth sliding animations -->
 
       <!-- onclick handlers are for initial prototyping only -->
-      <div id="chip-card-and-name-box-0" class="card-and-name-box">
+      <div id="chip-card-and-name-box-0"
+        class="card-and-name-box"
+        onclick="operator_chooses_chip_idx(0)">
         <div id="chip-card-and-border-box-0" class="card-and-border-box">
           <!-- borders are implemented as divs so that we can animate the
             shortening of each segment as time ticks down -->
@@ -91,12 +93,12 @@
             class="card-border card-border-bottom"></div>
           <div id="chip-card-border-left-0"
             class="card-border card-border-left"></div>
-          <div id="battle-chip-card-0"
-            class="battle-chip-card"
-            onclick="operator_chooses_chip_idx(0)"></div>
+          <div id="battle-chip-card-0" class="battle-chip-card"></div>
         </div>
         <div id="chip-name-0" class="chip-name"></div>
-      </div><div id="chip-card-and-name-box-1" class="card-and-name-box">
+      </div><div id="chip-card-and-name-box-1"
+        onclick="operator_chooses_chip_idx(1)"
+        class="card-and-name-box">
         <div id="chip-card-and-border-box-1" class="card-and-border-box">
           <div id="chip-card-border-top-1"
             class="card-border card-border-top"></div>
@@ -106,12 +108,12 @@
             class="card-border card-border-bottom"></div>
           <div id="chip-card-border-left-1"
             class="card-border card-border-left"></div>
-          <div id="battle-chip-card-1"
-            class="battle-chip-card"
-            onclick="operator_chooses_chip_idx(1)"></div>
+          <div id="battle-chip-card-1" class="battle-chip-card"></div>
         </div>
         <div id="chip-name-1" class="chip-name"></div>
-      </div><div id="chip-card-and-name-box-2" class="card-and-name-box">
+      </div><div id="chip-card-and-name-box-2"
+        onclick="operator_chooses_chip_idx(2)"
+        class="card-and-name-box">
         <div id="chip-card-and-border-box-2" class="card-and-border-box">
           <div id="chip-card-border-top-2"
             class="card-border card-border-top"></div>
@@ -121,12 +123,12 @@
             class="card-border card-border-bottom"></div>
           <div id="chip-card-border-left-2"
             class="card-border card-border-left"></div>
-          <div id="battle-chip-card-2"
-            class="battle-chip-card"
-            onclick="operator_chooses_chip_idx(2)"></div>
+          <div id="battle-chip-card-2" class="battle-chip-card"></div>
         </div>
         <div id="chip-name-2" class="chip-name"></div>
-      </div><div id="chip-card-and-name-box-3" class="card-and-name-box">
+      </div><div id="chip-card-and-name-box-3"
+        onclick="operator_chooses_chip_idx(3)"
+        class="card-and-name-box">
         <div id="chip-card-and-border-box-3" class="card-and-border-box">
           <div id="chip-card-border-top-3"
             class="card-border card-border-top"></div>
@@ -136,12 +138,12 @@
             class="card-border card-border-bottom"></div>
           <div id="chip-card-border-left-3"
             class="card-border card-border-left"></div>
-          <div id="battle-chip-card-3"
-            class="battle-chip-card"
-            onclick="operator_chooses_chip_idx(3)"></div>
+          <div id="battle-chip-card-3" class="battle-chip-card"></div>
         </div>
         <div id="chip-name-3" class="chip-name"></div>
-      </div><div id="chip-card-and-name-box-4" class="card-and-name-box">
+      </div><div id="chip-card-and-name-box-4"
+        onclick="operator_chooses_chip_idx(4)"
+        class="card-and-name-box">
         <div id="chip-card-and-border-box-4" class="card-and-border-box">
           <div id="chip-card-border-top-4"
             class="card-border card-border-top"></div>
@@ -151,9 +153,7 @@
             class="card-border card-border-bottom"></div>
           <div id="chip-card-border-left-4"
             class="card-border card-border-left"></div>
-          <div id="battle-chip-card-4"
-            class="battle-chip-card"
-            onclick="operator_chooses_chip_idx(4)"></div>
+          <div id="battle-chip-card-4" class="battle-chip-card"></div>
         </div>
         <div id="chip-name-4" class="chip-name"></div>
       </div>
