show damage of chips in hand

--- a/index.html
+++ b/index.html
@@ -89,26 +89,31 @@
         class="card-and-name-box"
         onclick="operator_chooses_chip_idx(0)">
         <div id="battle-chip-card-0" class="battle-chip-card"></div>
+        <div id="chip-info-0" class="chip-info"></div>
         <div id="chip-name-0" class="chip-name"></div>
       </div><div id="chip-card-and-name-box-1"
         onclick="operator_chooses_chip_idx(1)"
         class="card-and-name-box">
         <div id="battle-chip-card-1" class="battle-chip-card"></div>
+        <div id="chip-info-1" class="chip-info"></div>
         <div id="chip-name-1" class="chip-name"></div>
       </div><div id="chip-card-and-name-box-2"
         onclick="operator_chooses_chip_idx(2)"
         class="card-and-name-box">
         <div id="battle-chip-card-2" class="battle-chip-card"></div>
+        <div id="chip-info-2" class="chip-info"></div>
         <div id="chip-name-2" class="chip-name"></div>
       </div><div id="chip-card-and-name-box-3"
         onclick="operator_chooses_chip_idx(3)"
         class="card-and-name-box">
         <div id="battle-chip-card-3" class="battle-chip-card"></div>
+        <div id="chip-info-3" class="chip-info"></div>
         <div id="chip-name-3" class="chip-name"></div>
       </div><div id="chip-card-and-name-box-4"
         onclick="operator_chooses_chip_idx(4)"
         class="card-and-name-box">
         <div id="battle-chip-card-4" class="battle-chip-card"></div>
+        <div id="chip-info-4" class="chip-info"></div>
         <div id="chip-name-4" class="chip-name"></div>
       </div>
     </div>
