--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 </head>
 <body>
   <br>
+  <div id="navi-select">
+    <div id="portrait-megaman" class="navi-select-portrait"></div>
+    <div id="portrait-roll" class="navi-select-portrait"></div>
+    <div id="portrait-protoman" class="navi-select-portrait"></div>
+    <div id="portrait-ring" class="navi-select-portrait"></div>
+    <div id="portrait-gutsman" class="navi-select-portrait"></div>
+    <div id="portrait-turboman" class="navi-select-portrait"></div>
+  </div>
+  <br>
+  <br>
   <div id="minigame">
     <div id="turn-timer-box">
       <div id="turn-timer-fill"></div><div id="turn-timer-nofill"></div>
