implement animations with frames

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <div id="terrain_5_2" class="terrain terrain-Normal"></div>
       </div>
 
-      <div id="navi-1" class="navi west standing">
+      <div id="navi-1" class="navi protoman west standing">
         <div id="navi-1-hp" class="navi-hp">600</div>
         <div id="navi-1-barrier" class="navi-barrier"></div>
         <div id="navi-1-effect" class="navi-effect"></div>
       </div>
-      <div id="navi-2" class="navi east standing">
+      <div id="navi-2" class="navi magicman east standing">
         <div id="navi-2-hp" class="navi-hp">600</div>
         <div id="navi-2-barrier" class="navi-barrier"></div>
         <div id="navi-2-effect" class="navi-effect"></div>
