fix move animation bug

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
     </div>
   </div>
 
+  <div id="tutorial"> <!-- this will be chat for online mode -->
+  </div>
+
   <script src="mechanics.js" type="text/javascript"></script>
   <script src="animator.js" type="text/javascript"></script>
   <script src="operation.js" type="text/javascript"></script>
